# voice-activity-benchmark

./: .gitignore  .gitmodules  README.md  benchmark.py  dataset.py  engine.py  mixer.py  plot.py  requirements.txt
engines/: __init__.py
runtime/: .gitignore  CMakeLists.txt  runtime_test.c
